--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,5 @@
 // http://ionicframework.com/docs/theming/
-
+@import "ag-grid.css";
 
 // App Global Sass
 // --------------------------------------------------
